--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+    <guava.version>12.0.1</guava.version>
+    <vaadin.version>6.8.1</vaadin.version>
+    <junit.version>4.8.1</junit.version>
+    <guice.version>3.0</guice.version>
+    <guice-servlet.version>3.0</guice-servlet.version>
   </properties>
   
   <build>
@@ -36,12 +41,27 @@
     <dependency>
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
-    	<version>4.8.1</version>
+    	<version>${junit.version}</version>
     </dependency>
 	<dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin</artifactId>
-      <version>6.8.1</version>
+      <version>${vaadin.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>${guava.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.inject</groupId>
+    	<artifactId>guice</artifactId>
+    	<version>${guice.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.inject.extensions</groupId>
+    	<artifactId>guice-servlet</artifactId>
+    	<version>${guice-servlet.version}</version>
     </dependency>
   </dependencies>
 </project>
